# front-django-account

./: README.rst  setup.cfg
accounts/: admin.py  exceptions.py  front_urls.py  models.py
accounts/forms/: base_elements.py  confirmation_form.py  login_form.py  reset_password_form.py  reset_password_sended.py  user_registration_form.py
accounts/front_views/: front_confirmation_registration.py  front_confirmation_registration_success.py  front_confirmation_reset_password.py  front_login_views.py  front_logout_view.py  front_registration_success.py  front_registration_views.py  front_reset_password.py  front_reset_password_sended.py  front_reset_password_success.py
accounts/migrations/: 0001_initial.py
accounts/services/: accept_reset_password.py  activate_user.py  confirmation.py  registration.py  reset_password.py
accounts/templates/account/: base.html  confirmation_registration_success.html  registration_success.html  reset_password_sended.html  reset_password_success.html
accounts/validators/: base.py  confirmations_validators.py  registration_validators.py
