[metadata]
name = front-django-account
version = 0.2.2
description = A Django app account.
long_description = file: README.rst
url = ''
author = gergerov
author_email = gergerov94@example.com
license = BSD-3-Clause 
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 3.0 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.0 
    django-rest-framework
    django-crispy-forms
    